[gd_scene load_steps=2 format=2]

[ext_resource path="res://menu_scene/menu_scene.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_top = 0.00235697
anchor_right = 1.0
anchor_bottom = 1.00236
margin_top = -1.41418
margin_bottom = -1.41418
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="LobbyPanel" type="Panel" parent="."]
anchor_left = 0.500691
anchor_top = 0.5
anchor_right = 0.500691
anchor_bottom = 0.5
margin_left = -160.708
margin_top = -108.001
margin_right = 159.292
margin_bottom = 113.999
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LobbyPanel"]
anchor_left = 0.3
anchor_top = 0.108108
anchor_right = 0.7
anchor_bottom = 0.18018
text = "Server Lobby"
align = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PlayerList" type="ItemList" parent="LobbyPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -55.0
margin_right = 128.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KickButton" type="Button" parent="LobbyPanel"]
anchor_left = 0.3
anchor_top = 0.833333
anchor_right = 0.7
anchor_bottom = 0.938596
text = "Kick Player"
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="pressed" from="LobbyPanel/KickButton" to="." method="_on_KickButton_pressed"]
